--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,8 +50,8 @@
     <form action="" class="login-form">
 
         <h3 id="titleForm">login form</h3>
-
-        <input type="email" placeholder="Enter your email" id="username" class="box">
+        <input type="text" placeholder="Enter your name" id="name" class="box" style="display: none">
+        <input type="text" placeholder="Enter your username" id="username" class="box">
         <input type="password" placeholder="Enter your password" id="password" class="box">
         <div class="remember d-flex">
             <div class="col-md-6">
